# ProjetS5_Groupe2

./: .gitignore  BOGUES.txt  Exec_simulatueur.sh  Execution_simulatueur.sh  Fonctionnalites_implementees_et_manquantes.txt  Journal.txt  Lecture_elf.c  MODE_D_EMPLOI.txt  Makefile  README.md  STRUCTURE_DU_CODE.txt  TESTS.txt  affichage_relocation.c  affichage_relocation.h  afficher_section.c  afficher_section.h  lectureSH.c  lectureSH.h  lectureST.c  lectureST.h  lecture_ELF.c  lecture_headers.c  lecture_headers.h  reimpl_R_ARM_ABS.c  reimpl_R_ARM_ABS.h  test.c  test.sh  test_phase1.sh  test_phase2.sh
Presentation/: Partie1.sh  correction.sh  reimplantation.sh  reimplantation2.sh  renum.sh
elf_linker-1.0/: ARM_runner_example.c  ARM_runner_exec.c  ARM_runner_exec.h  Makefile  Makefile.am  Makefile.in  arm_simulator_interface.h  config.h.in  configure  configure.ac  csapp.c  csapp.h  debug.c  gdb_protocol.c  gdb_protocol.h  sample_run.sh  scanner.c  scanner.h  scanner.l  util.c  util.h
elf_linker-1.0/Examples_loader/: Makefile.am  Makefile.in  configure  configure.ac
examples/: arbrebin.h  example5.c  example5.s  example6.c  example6.s  example7.c  example7.s  example8.c  example8.s
src/: ARM_runner_exec.c  ARM_runner_exec.h  affichage_relocation.c  affichage_relocation.h  afficher_section.c  afficher_section.h  arm_simulator_interface.c  arm_simulator_interface.h  correctionSymboles.c  correctionSymboles.h  debug.h  displayCorrectionSymbols.c  ecritureSH.c  ecritureSH.h  inutile.txt  lectureSH.c  lectureSH.h  lectureST.c  lectureST.h  lecture_ELF.c  liberation.c  (+10 more)
(+1 files in other folders)
